fix: align reading and writing of columns in the task CSV